[package]
name = "tauri-plugin-hyper-fetch-example"
version = "0.1.0"
description = "tauri-plugin-hyper-fetch example"
authors = ["maemon4095"]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1" }
tauri-plugin-hyper-fetch = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.5.1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
